# A-Telegram-Weather-Chatbot

./: .cz.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
src/whatsappy/: client.py
