[tool.poetry]
name = "whatsappy-sdk"
version = "0.1"
description = "WhatsAppy — Build WhatsApp applications, not HTTP requests."
authors = ["Musa Adamu Wakili <musawakiliml@hotmail.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email", "timezone"], version = "^2.13.4"}
requests = "^2.34.2"
httpx = "^0.28.1"
mypy = "^2.1.0"
pytest = "^9.1.1"
respx = "^0.23.1"
ruff = "^0.15.20"
isort = "^8.0.1"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
types-requests = "^2.33.0.20260518"
commitizen = "^4.16.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mike = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testspaths = ["tests"]

[tool.coverage.run]
source=["src/whatsappy"]

[tool.coverage.report]
show_missing=true
skip_covered=false